--- a/Northwind.Application/Views/Orders/Details.cshtml
+++ b/Northwind.Application/Views/Orders/Details.cshtml
@@ -4,30 +4,22 @@
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Orders";
-
-    var orderId = this.Context.Session.GetInt32(SessionValues.OrderId);
 }
 @functions{
-    object? SubmitOrder()
-    {
-        this.Context.Session.Remove(SessionValues.OrderId);
-        this.Context.Session.Remove(SessionValues.OrderStatus);
-        return null;
-    }
+    int? OrderId => Model.OrderDate == null ? Model.OrderId : this.Context.Session.GetInt32(SessionValues.OrderId);
+    string Hidden => User.IsInRole("customer") && Model.OrderId == OrderId ? "" : "hidden";
 }
-
 
 <h1>Order</h1>
 
 @await Html.PartialAsync("_DetailsPartial", Model, ViewData)
 
-<button id="orderSubmitButton" class="btn btn-info pl-3" onclick="submitOrder()" @(User.IsInRole("customer") && Model.OrderId == orderId ? "" : "hidden")>Submit Order</button>
+<button id="orderSubmitButton" class="btn btn-info pl-5" onclick="submitOrder()" @Hidden>Confirm</button>
 
 <script>
     function submitOrder() { 
-        $('fff').html('@SubmitOrder()');
         document.getElementById("orderSubmitButton").hidden = true;
-        location.href = '@Url.ActionLink("ThankYou", "Orders")';
+        location.href = '@Url.ActionLink("Confirm", "Orders", new { orderId = OrderId })';
     }
 
 </script>
