--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -1,11 +1,12 @@
 ﻿@using System.Reflection;
+@using Northwind.Application.Constants
 @using Northwind.Bll.Services.Extensions;
 @model IEnumerable<object>
 
 @functions {
     string ControllerName => ViewData["ControllerName"].ToString().SplitForUpperCase(Model.FirstOrDefault());
     PropertyInfo[] Properties => base.Model.First().GetType().GetProperties();
-    string Disabled => User.IsInRole("admin") ? "" : "disabled";
+    string Disabled => User.IsInRole(UserRoles.Admin) ? "" : "disabled";
 
     object? GetPropertyValue<T>(object item, params string[] search)
     {
@@ -23,8 +24,11 @@
     string GetDetailsLink(int id) => Url.ActionLink("Details", ControllerName, new { id = id }) ?? "/Home/Index";
 }
 
-<input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" style="margin-left:120px;" type="checkbox" @Disabled />
-<label >Select all</label>
+@if (User.IsInRole(UserRoles.Admin))
+{
+    <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" style="margin-left:120px;" type="checkbox" @Disabled />
+    <label>Select all</label>
+}
 
 <form id="form" method="get" asp-action=@ViewData["ActionName"]>
     <div class="row">
@@ -37,9 +41,13 @@
                 <div class="text-xl-center fw-bold m-2">
                     @(GetPropertyValue<string>(item, "Name") as string)
                 </div>
-                <div class="text-center align-content-center">
-                    <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" @Disabled />
-                </div>
+
+                @if (User.IsInRole(UserRoles.Admin))
+                {
+                    <div class="text-center align-content-center">
+                        <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" onclick="onChangeHandler(this)" @Disabled />
+                    </div>
+                }
             </div>
         }
     </div>
