--- a/Northwind.Application/Views/Categories/Index.cshtml
+++ b/Northwind.Application/Views/Categories/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
+﻿@using Northwind.Application.Constants
+@model IEnumerable<Northwind.Application.Models.Category.CategoryIndexModel>
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "Categories";
@@ -7,5 +8,8 @@
 
 <h1>Categories</h1>
 
-@await Html.PartialAsync("_IndexButtonsPartial")
+@if (User.IsInRole(UserRoles.Admin))
+{
+    @await Html.PartialAsync("_IndexButtonsPartial")
+}
 @await Html.PartialAsync("_GridFormPartial", Model, ViewData)
