--- a/Northwind.Application/Views/Products/Index.cshtml
+++ b/Northwind.Application/Views/Products/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@addTagHelper *, Northwind.Application
+﻿@using Northwind.Application.Constants
+@addTagHelper *, Northwind.Application
 @model Northwind.Application.Models.Product.ProductIndexModel
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
@@ -9,13 +10,13 @@
 
 <h1>@(ViewBag.CategoryName != "" ? $"\"{ViewBag.CategoryName}\"" : string.Empty) Product List</h1>
 
-@if (User.IsInRole("admin"))
+@if (User.IsInRole(UserRoles.Admin))
 {
-    <div class="pb-3 pt-3 row" style="max-width:500px;">
-        <div class="col-md-3">
-            <h4>Category:</h4>
+    <div class="row">
+        <div class="col-3 align-content-center">
+            <h5 class="float-end">Category:</h5>
         </div>
-        <div class="col-md-9">
+        <div class="col-6">
             <select onchange="onCategorySelectListChange(value)" class="form-select">
                 @foreach (var option in Model.CategoryList!)
                 {
@@ -30,15 +31,16 @@
                 }
             </select>
         </div>
+        <div class="col-2">
+            @await Html.PartialAsync("_IndexButtonsPartial")
+        </div >
     </div>
 }
-
-@await Html.PartialAsync("_IndexButtonsPartial", ViewData)
 
 @if (Model.Products.Any())
 {
     @await Html.PartialAsync("_TableFormPartial", Model.Products, ViewData)
-    <page-link page-model="Model.PageViewModel" page-action="Index" class="float-end"></page-link>
+    <page-link page-model="Model.PageViewModel" page-action="Index"></page-link>
 }
 else
 {
