--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -6,10 +6,12 @@
 @functions {
     string? ControllerName => ViewData["ControllerName"] == null ? "" : ViewData["ControllerName"]!.ToString();
     string? Method => ViewData["FormMethod"] == null ? "get" : ViewData["FormMethod"]!.ToString();
-    PropertyInfo[] Properties => Model.Any() ? Model.First().GetType().GetProperties() : new PropertyInfo[0];
-    IEnumerable<string> PropertyNames => Properties.Select(x => x.Name).Where(x => !x.Contains("Id"));
     string Disabled => User.IsInRole("admin") ? "" : "disabled";
     string? Hidden => ViewData["Hidden"] == null ? "" : ViewData["Hidden"]!.ToString();
+    string ActionName => ViewData["ActionName"] as string ?? "";
+
+    PropertyInfo[] Properties => Model.Any() ? Model.First().GetType().GetProperties() : new PropertyInfo[0];
+    IEnumerable<string> PropertyNames => Properties.Select(x => x.Name).Where(x => !x.Contains("Id"));
 
     IEnumerable<object?> GetPropertyValues(object? item)
     {
@@ -20,11 +22,11 @@
 
         foreach (var propertyName in PropertyNames)
         {  
-            object value = null;
+            object? value = null;
 
             try
             {
-                value = item.GetType().GetProperty(propertyName).GetValue(item);
+                value = item?.GetType().GetProperty(propertyName)?.GetValue(item);
             }
             catch (ArgumentNullException ex)
             {
@@ -41,16 +43,33 @@
 
     object? GetId(object item)
     {
-        var pk1 = Properties.FirstOrDefault(x => x.Name.Contains("Id") && ControllerName!.Contains(x.Name[..^3]));
-        var pk1Value = pk1 == null ? null : pk1.GetValue(item);
+        var primaryKeyOne = Properties.FirstOrDefault(x => x.Name.Contains("Id") && ControllerName!.Contains(x.Name[..^3]));
+        var primaryKeyOneValue = primaryKeyOne == null ? null : primaryKeyOne.GetValue(item);
 
-        var pk2 = Properties.FirstOrDefault(x => x.Name.Contains("Id") && !ControllerName!.Contains(x.Name[..^3]));
-        var pk2Value = pk2 == null ? null : pk2.GetValue(item);
+        var primaryKeyTwo = Properties.FirstOrDefault(x => x.Name.Contains("Id") && !ControllerName!.Contains(x.Name[..^3]));
+        var primaryKeyTwoValue = primaryKeyTwo == null ? null : primaryKeyTwo.GetValue(item);
 
-        return IsDetail ? $"{pk1Value} {pk2Value}" : pk1Value;
+        return IsDetail ? $"{primaryKeyOneValue} {primaryKeyTwoValue}" : primaryKeyOneValue;
     }
 
-    string GetDetailsLink(object id) => Url.ActionLink("Details", ControllerName, new { id = id }) ?? "/Home/Index";
+    string GetLink(object id)
+    {
+        if (User.IsInRole(UserRoles.Admin))
+        {
+            return Url.ActionLink("Details", ControllerName, new { id = id }) ?? "/Home/Index";
+        }
+        else
+        {
+            if (ControllerName == "Orders")
+            {
+                return Url.ActionLink("Index", "OrderDetails", new { orderId = id }) ?? "/Home/Index";
+            }
+            else
+            {
+                return Url.ActionLink("Details", ControllerName, new { id = id }) ?? "/Home/Index";
+            }
+        }
+    }
 
     bool IsDetail => ControllerName!.Contains("Detail");
 
@@ -71,7 +90,7 @@
     }
 }
 
-<div style="padding-top:20px;">
+<div class="pt-1">
     <table class="table">
         <thead style="height:60px;">
             <tr>
@@ -94,58 +113,66 @@
                         @(name.SplitForUpperCase() + ending)
                     </th>
                 }
-                <th class="text-center align-content-center">
-                    <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" style="margin-left:20px;" type="checkbox" @Disabled @Hidden />
-                </th>
+
+                @if (User.IsInRole(UserRoles.Admin))
+                {
+                    <th class="text-center align-content-center">
+                        <input onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" style="margin-left:20px;" type="checkbox" @Disabled @Hidden />
+                    </th>
+                }
             </tr>
         </thead>
         <tbody>
             <form id="form" method="@Method" asp-action=@ViewData["ActionName"] asp-controller=@ControllerName>
                 @foreach (var item in base.Model)
                 {
-                    if (ViewData["ActionName"] == "DeleteConfirmed")
+                    if (ActionName == "DeleteConfirmed")
                     {
                         <input value="@GetId(item)" name="ids" type="hidden" />
                     }
 
                     <tr class="@(!IsDetail ? "change-background-color" : "")" style="@(!IsDetail ? "cursor:pointer" : "")">
-                         @foreach (var value in GetPropertyValues(item))
-                         {
-                             <td class="align-content-center" style="@(GetStyle(value))" onclick=@(!IsDetail ? $"location.href='{GetDetailsLink(GetId(item)!)}'" : "")>
-                                @if (value is byte[])
-                                {
-                                    <img src="data:image/bmp;base64,@Convert.ToBase64String(value as byte[] ?? new byte[0])" style="color: height:60px;width:60px;" />
-                                }
-                                else
-                                {
-                                    @if (value is DateTime)
-                                    {
-                                        @(((DateTime)value).ToShortDateString())
-                                    }
-                                    else
-                                    {
-                                        @if (value is decimal)
-                                        {
-                                            @(((decimal)value).ToString("f2"))
-                                        }
-                                        else
-                                        {
-                                            @if (value is float)
-                                            {
-                                                @(((float)value).ToString("f2"))
-                                            }
-                                            else
-                                            {
-                                                @value
-                                            }
-                                        }
-                                    }
-                                }
+                        @foreach (var value in GetPropertyValues(item))
+                        {
+                            <td class="align-content-center" style="@(GetStyle(value))" onclick=@(!IsDetail ? $"location.href='{GetLink(GetId(item)!)}'" : "")>
+                               @if (value is byte[])
+                               {
+                                   <img src="data:image/bmp;base64,@Convert.ToBase64String(value as byte[] ?? new byte[0])" style="height:60px;width:60px;" />
+                               }
+                               else
+                               {
+                                   @if (value is DateTime)
+                                   {
+                                       @(((DateTime)value).ToShortDateString())
+                                   }
+                                   else
+                                   {
+                                       @if (value is decimal)
+                                       {
+                                           @(((decimal)value).ToString("f2"))
+                                       }
+                                       else
+                                       {
+                                           @if (value is float)
+                                           {
+                                               @(((float)value).ToString("f2"))
+                                           }
+                                           else
+                                           {
+                                               @value
+                                           }
+                                       }
+                                   }
+                               }
+                           </td>
+                        }
+
+                        @if (User.IsInRole(UserRoles.Admin))
+                        {
+                            <td class="text-center align-content-center">
+                                <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" style="margin-left:20px;" onclick="onChangeHandler(this)" @Disabled @Hidden />
                             </td>
-                         }
-                        <td class="text-center align-content-center">
-                            <input name="ids" type="checkbox" id="@GetId(item)" value="@GetId(item)" style="margin-left:20px;" onclick="onChangeHandler(this)" @Disabled @Hidden />
-                        </td>
+                        }
                     </tr>
                 }
             </form>
