Designed Order cancel logics

--- a/Northwind.Application/Views/OrderDetails/Create.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["ControllerName"] = "OrderDetails";
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    var categoryId = ViewBag.CategoryId;
 }
 
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -43,12 +44,13 @@
         <div class="pt-3">
             <label class="fw-bold">Total Cost: </label>
             <label id="totalCostLabel"></label>
+            <span> $</span>
         </div>
     </form>
 
     <div class="pt-3">
         <button type="submit" form="form" class="btn btn-primary fw-bold">Save</button>
-        <button class="btn btn-primary fw-bold float-end" onclick="location.href='@Url.ActionLink("Details", "Products", new { id = Model.ProductId })'">
+        <button class="btn btn-primary fw-bold float-end" onclick="location.href='@Url.ActionLink("Index", "Products", new { categoryId = categoryId })'">
             Back
         </button>
     </div>
