--- a/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_GridFormPartial.cshtml
@@ -21,7 +21,20 @@
         return (int)(Properties.First(x => ControllerName.Contains(x.Name[..^3]) && x.Name.Contains("Id")).GetValue(item) ?? 0);
     }
 
-    string GetDetailsLink(int id) => Url.ActionLink("Details", ControllerName, new { id = id }) ?? "/Home/Index";
+    string GetLink(int? id)
+    {
+        var defaultRoute = "/Home/Index";
+
+        if (User.IsInRole(UserRoles.Customer) && !User.IsInRole(UserRoles.Admin))
+        {
+            if (ControllerName == "Categories")
+            {
+                return Url.ActionLink("Index", "Products", new { categoryId = id }) ?? defaultRoute;
+            }
+        }
+
+        return Url.ActionLink("Details", ControllerName, new { id = id }) ?? defaultRoute;
+    }
 }
 
 @if (User.IsInRole(UserRoles.Admin))
@@ -35,7 +48,7 @@
         @foreach (var item in Model)
         {
             <div class="col p-3" style="text-align: center">
-                <div style="cursor:pointer;height:130px;" onclick="location.href = '@GetDetailsLink(GetId(item))'">
+                <div style="cursor:pointer;height:130px;" onclick="location.href = '@GetLink(GetId(item))'">
                     <img src="data:image/bmp;base64,@Convert.ToBase64String(GetPropertyValue<byte[]>(item, "Picture", "Photo", "Image") as byte[] ?? new byte[0])" style="height:120px;width:120px;" />
                 </div>
                 <div class="text-xl-center fw-bold m-2">
