Resolved order confirmation user role issues

--- a/Northwind.Application/Views/OrderDetails/Index.cshtml
+++ b/Northwind.Application/Views/OrderDetails/Index.cshtml
@@ -5,13 +5,13 @@
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
     ViewData["ControllerName"] = "OrderDetails";
     ViewData["ActionName"] = "Delete";
-    ViewData["OrderId"] = ViewBag.OrderId;
-    ViewData["Confirmed"] = ViewBag.Confirmed;
 }
 
 @functions {
+    bool? Confirmed => ViewBag.Confirmed;
+    string? CustomerId => ViewBag.CustomerId;
     int? OrderId => this.Context.Session.GetInt32(SessionValues.OrderId) ?? Model.OrderDetails.FirstOrDefault()?.OrderId;
-    string Hidden => User.IsInRole(UserRoles.Customer) && OrderId != null && (!(ViewData["Confirmed"] as bool?) ?? false) ? "" : "hidden";
+    string Hidden => User.IsInRole(UserRoles.Customer) && OrderId != null && (!Confirmed ?? false) ? "" : "hidden";
 }
 
 <h1>"@(ViewBag.ProductOrCompanyName)" Order Details</h1>
@@ -24,14 +24,18 @@
 @if (Model.OrderDetails.Any())
 {
     @await Html.PartialAsync("_TableFormPartial", Model.OrderDetails, ViewData)
+    var customerId = this.Context.Session.GetString(SessionValues.CustomerId);
 
     if (User.IsInRole(UserRoles.Customer) && !User.IsInRole(UserRoles.Admin))
     {
-        var customerId = this.Context.Session.GetString(SessionValues.CustomerId);
         <button class="btn btn-primary fw-bold" onclick="@($"location.href = '{Url.ActionLink("Index", "Orders", new { customerId = customerId })}'")">Back To Orders</button>
     }
 
-    <button id="orderConfirmButton" class="btn btn-info pl-5" onclick="confirmOrder()" @Hidden>Confirm</button>
+    if (User.IsInRole(UserRoles.Customer) && CustomerId == customerId)
+    {
+        <button id="orderConfirmButton" class="btn btn-info pl-5" onclick="confirmOrder()" @Hidden>Confirm</button>
+    }
+
     <button class="btn btn-danger pl-5 float-end" onclick="@($"location.href = '{Url.ActionLink("Cancel", "Orders", new { id = OrderId })}'")" @Hidden>Cancel</button>
 
     <page-link page-model="Model.PageViewModel" page-action="Index" class="float-end"></page-link>
