--- a/Northwind.Application/Views/Shared/_ValidationSpanPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_ValidationSpanPartial.cshtml
@@ -13,164 +13,178 @@
     {
         get
         {
-            if (ViewData != null)
-            {
-                return ViewData["PropertyName"] == null ? "" : ViewData["PropertyName"].ToString();
-            }
-
-            return "";
+            return ViewData["PropertyName"] as string ?? "";
         }
     }
 }
 
 @if (Model is EmployeeEditModel)
 {
+    var employeeEditModel = Model as EmployeeEditModel;
+
     if (PropertyName == "FirstName")
     {
-        <span asp-validation-for="@((Model as EmployeeEditModel).FirstName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@employeeEditModel!.FirstName" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "LastName")
     {
-        <span asp-validation-for="@((Model as EmployeeEditModel).LastName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(@employeeEditModel!.LastName)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "HireDate")
     {
-        <span asp-validation-for="@((Model as EmployeeEditModel).HireDate)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(@employeeEditModel!.HireDate)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "BirthDate")
     {
-        <span asp-validation-for="@((Model as EmployeeEditModel).BirthDate)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(@employeeEditModel!.BirthDate)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is EmployeeCreateModel)
 {
+    var employeeCreateModel = Model as EmployeeCreateModel;
+
     if (PropertyName == "FirstName")
     {
-        <span asp-validation-for="@((Model as EmployeeCreateModel).FirstName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(employeeCreateModel!.FirstName)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "LastName")
     {
-        <span asp-validation-for="@((Model as EmployeeCreateModel).LastName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(employeeCreateModel!.LastName)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "HireDate")
     {
-        <span asp-validation-for="@((Model as EmployeeCreateModel).HireDate)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(employeeCreateModel!.HireDate)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "BirthDate")
     {
-        <span asp-validation-for="@((Model as EmployeeCreateModel).BirthDate)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(employeeCreateModel!.BirthDate)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is CategoryEditModel)
 {
+    var categoryEditModel = Model as CategoryEditModel;
+
     if (PropertyName == "CategoryName")
     {
-        <span asp-validation-for="@((Model as CategoryEditModel).CategoryName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(categoryEditModel!.CategoryName)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is CategoryCreateModel)
 {
+    var categoryCreateModel = Model as CategoryCreateModel;
+
     if (PropertyName == "CategoryName")
     {
-        <span asp-validation-for="@((Model as CategoryCreateModel).CategoryName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(categoryCreateModel!.CategoryName)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is ProductEditModel)
 {
+    var productEditModel = Model as ProductEditModel;
+
     if (PropertyName == "ProductName")
     {
-        <span asp-validation-for="@((Model as ProductEditModel).ProductName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productEditModel!.ProductName)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitPrice")
     {
-        <span asp-validation-for="@((Model as ProductEditModel).UnitPrice)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productEditModel!.UnitPrice)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitsInStock")
     {
-        <span asp-validation-for="@((Model as ProductEditModel).UnitsInStock)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productEditModel!.UnitsInStock)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitsOnOrder")
     {
-        <span asp-validation-for="@((Model as ProductEditModel).UnitsOnOrder)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productEditModel!.UnitsOnOrder)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "ReorderLevel")
     {
-        <span asp-validation-for="@((Model as ProductEditModel).ReorderLevel)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productEditModel!.ReorderLevel)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is ProductCreateModel)
 {
+    var productCreateModel = Model as ProductCreateModel;
+
     if (PropertyName == "ProductName")
     {
-        <span asp-validation-for="@((Model as ProductCreateModel).ProductName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productCreateModel!.ProductName)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitPrice")
     {
-        <span asp-validation-for="@((Model as ProductCreateModel).UnitPrice)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productCreateModel!.UnitPrice)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitsInStock")
     {
-        <span asp-validation-for="@((Model as ProductCreateModel).UnitsInStock)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productCreateModel!.UnitsInStock)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "UnitsOnOrder")
     {
-        <span asp-validation-for="@((Model as ProductCreateModel).UnitsOnOrder)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productCreateModel!.UnitsOnOrder)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "ReorderLevel")
     {
-        <span asp-validation-for="@((Model as ProductCreateModel).ReorderLevel)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(productCreateModel!.ReorderLevel)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is CustomerCreateModel)
 {
+    var customerCreateModel = Model as CustomerCreateModel;
+
     if (PropertyName == "CompanyName")
     {
-        <span asp-validation-for="@((Model as CustomerCreateModel).CompanyName)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(customerCreateModel!.CompanyName)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is OrderCreateModel)
 {
+    var orderCreateModel = Model as OrderCreateModel;
+
     if (PropertyName == "Freight")
     {
-        <span asp-validation-for="@((Model as OrderCreateModel).Freight)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(orderCreateModel!.Freight)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "CustomerId")
     {
-        <span asp-validation-for="@((Model as OrderCreateModel).CustomerId)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(orderCreateModel!.CustomerId)" class="text-danger float-end"></span>
     }
 }
 
 @if (Model is OrderEditModel)
 {
+    var orderEditModel = Model as OrderEditModel;
+
     if (PropertyName == "Freight")
     {
-        <span asp-validation-for="@((Model as OrderEditModel).Freight)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(orderEditModel!.Freight)" class="text-danger float-end"></span>
     }
 
     if (PropertyName == "CustomerId")
     {
-        <span asp-validation-for="@((Model as OrderEditModel).CustomerId)" class="text-danger float-end"></span>
+        <span asp-validation-for="@(orderEditModel!.CustomerId)" class="text-danger float-end"></span>
     }
 }
+
