--- a/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_TableFormPartial.cshtml
@@ -9,6 +9,7 @@
     string Disabled => User.IsInRole("admin") ? "" : "disabled";
     string? Hidden => ViewData["Hidden"] == null ? "" : ViewData["Hidden"]!.ToString();
     string ActionName => ViewData["ActionName"] as string ?? "";
+    string ForeignKeyValue => ViewData["ForeignKey"] as string ?? "";
 
     PropertyInfo[] Properties => Model.Any() ? Model.First().GetType().GetProperties() : new PropertyInfo[0];
     IEnumerable<string> PropertyNames => Properties.Select(x => x.Name).Where(x => !x.Contains("Id"));
@@ -97,7 +98,7 @@
             <tr>
                 @foreach (var name in PropertyNames)
                 {
-                    <th class="align-content-center">
+                    <th class="align-content-center" onclick="orderColumn('@name')" style="cursor:pointer">
                         @{
                             var ending = "";
 
@@ -185,3 +186,10 @@
 {
     <button class="btn btn-primary fw-bold" onclick="location.href = '@ViewData["PreviousPage"]'">Back</button>
 } *@
+
+<script>
+    function orderColumn(name) {
+        const url = `/${'@ControllerName'}/Index?customerId=${'@ForeignKeyValue'}&sortBy=${name}`;
+        window.location.href = window.location.origin.concat(url);
+    }
+</script>
